samples/_failures_safe/1761544074_b6603f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_774175b1.c: In function ‘create_parser_node’:
./samples/SAFE/__tmp_774175b1.c:175:9: error: expected ‘;’ at end of input
  175 |     node
      |         ^
      |         ;
./samples/SAFE/__tmp_774175b1.c:175:5: error: expected declaration or statement at end of input
  175 |     node
      |     ^~~~
